third_party/move/move-compiler-v2/tests/unused-assignment/v1-commands/mixed_lvalue.exp

Diagnostics:
error: invalid assignment
   ┌─ tests/unused-assignment/v1-commands/mixed_lvalue.move:14:19
   │
14 │         (_, _, _, s.f) = four();
   │                   ^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ tests/unused-assignment/v1-commands/mixed_lvalue.move:15:19
   │
15 │         (_, _, _, *r_ref) = four();
   │                   ^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
